--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ header {
     position: absolute;
     top: 20vh;
     left: 0;
-    background-image: url(./images/eye-catch_bg2.jpg);
+    background-image: url(../images/eye-catch_bg.jpg);
     background-position: center;
     background-size: cover;
 }
